package org.qut;

/**
 * Enums to reference shape types
 */
public class MyShape {
    enum Shape {
        RECTANGLE,
        POLYGON,
        ELLIPSE,
        POINT,
        LINE
    }
}
