@startuml

title __CAB302-ASSIGNMENT2's Class Diagram__\n

  package org.qut {
    class Main {
    }
  }
  

  package org.qut {
    class MyCanvas {
    }
  }
  

  package org.qut {
    class MyCanvasTest {
    }
  }
  

  package org.qut {
    class MyCoordinate {
    }
  }
  

  package org.qut {
    class MyCoordinateTest {
    }
  }
  

  package org.qut {
    class MyFrameComponentFactory {
    }
  }
  

  package org.qut {
    class MyFrameComponentFactoryTest {
    }
  }
  

  package org.qut {
    class MyFrameLayout {
    }
  }
  

  package org.qut {
    class MyShape {
    }
  }
  

  package org.qut {
    class MyShapeTest {
    }
  }
  

  MyCanvas -up-|> MouseListener
  MyCanvas -up-|> MouseMotionListener
  MyCanvas o-- Shape : curDrawShape
  MyCanvas o-- MyCoordinate : mouseMovedC
  MyCanvas o-- MyCoordinate : mousePressedC
  MyCanvas o-- MyCoordinate : mouseDraggedC
  MyFrameLayout o-- MyCanvas : canvas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
